--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,14 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-<!--      <scope>test</scope>-->
+      <version>4.7</version>
+      <!--<scope>test</scope>-->
+    </dependency>
+
+    <dependency>
+      <groupId>commons-digester</groupId>
+      <artifactId>commons-digester</artifactId>
+      <version>2.1</version>
     </dependency>
   </dependencies>
 
@@ -23,6 +29,7 @@
         <directory>src/main/java</directory>
         <includes>
           <include>**/*.properties</include>
+          <include>**/*.xml</include>
         </includes>
       </resource>
       <!-- mapper.xml文件在resources目录下-->
